# Traffic-Sign-Recognition-App

./: .gitignore  README.md  fix_kotlin.kts  gradle.properties  requirements.txt  setup.py  sign_position_tool.html
app/: build.gradle.kts  lint-baseline.xml
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/cpp/include/: logger.hpp
app/src/main/cpp/src/: logger.cpp  tensor.cpp
gradle/: libs.versions.toml
model/: export_to_onnx.py  inference.py  prepare_dataset.py  test.py  train.py
model/utils/: dataset_to_yolo.py  dataset_yaml.py  download.py  file_ops.py  gtsrb_metadata.py
model_training/: .gitignore  README.md  baseline_eu_yolo.ipynb  baseline_yolo.ipynb  cascade_classifier.ipynb  classes.txt  download_datasets.ipynb  links.txt  lisa_classes_review.ipynb  lisa_review.csv  mapillary_class_review.csv  mapillary_class_review_eu.csv  mapillary_classes_review eu.ipynb  mapillary_classes_review.ipynb  requirements.txt  test_videos.ipynb  train_us.ipynb
model_training/experiments/baseline_eu_v1/: args.yaml  results.csv
model_training/experiments/baseline_v1/: args.yaml  results.csv
model_training/experiments/baseline_v1_1280/: args.yaml  results.csv
model_training/experiments/baseline_v1_tiled/: args.yaml  results.csv
model_training/experiments/baseline_v2/: args.yaml  results.csv
model_training/experiments/baseline_v2_n/: args.yaml  results.csv
model_training/experiments/baseline_v3/: args.yaml  results.csv
model_training/experiments/baseline_v3_n/: args.yaml  results.csv
(+99 files in other folders)
